--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
 .copoverde
 {
-    height: 550px;
+    height: 700px;
     text-align:right;
+}
+
+.starbucks
+{
+ color:rgb(36, 228, 36); 
+font-family: "montserrant";
+font-style: "normal" ;
+font-weight: 300;
+}
+
+.cliqueaqui
+{
+    text-align:low; 
+}
+
+.logo
+{
+text-align: left;
+height: 50px;
 }
