--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@
 .starbucks
 {
  color:rgb(36, 228, 36); 
-font-family: "montserrant";
+font-family: "montserrant"; 
 font-style: "normal" ;
 font-weight: 300;
 }
 
 .cliqueaqui
-{
-    text-align:low; 
-}
+ {
+position: relative 
+left : 20px ;
+ }
 
 .logo
 {
