--- a/style.css
+++ b/style.css
@@ -12,10 +12,15 @@ font-style: "normal" ;
 font-weight: 300;
 }
 
-.cliqueaqui
+.cliqueaqui 
  {
-position: relative 
-left : 20px ;
+position: absolute;
+bottom : 20px ;
+border-width: 20px;
+border-color:rgb(36, 228, 36);
+border-style: solid;
+border-radius: 10px;
+background-color: rgb(36, 228, 36) ;
  }
 
 .logo
