--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 .starbucks 
 {
-margin: 0;s
+margin: 0;
 padding: 0;
 box-sizing: border-box;
 font-family:'poppins', 'sans-serif';
@@ -25,11 +25,12 @@ color:rgb(36, 228, 36);
 .cliqueaqui 
  {
 position: absolute;
+left: 150px;
 bottom : 20px ;
 border-width: 20px;
 border-color:rgb(36, 228, 36);
 border-style: solid;
-border-radius: 10px;
+border-radius: 50px;
 background-color: rgb(36, 228, 36) ;
 
  }
@@ -79,3 +80,9 @@ body{
 {
     font-family:'montserrat', 'sans-serif';
 }
+
+.descrição2 
+{
+  margin-top:-25%; 
+}
+
