--- a/style.css
+++ b/style.css
@@ -1,88 +1,5 @@
-@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Nunito+Sans:ital,wght@0,400;0,700;0,800;1,300;1,700&family=Poppins:wght@400;500;600;700;800;900&);
-
-.copoverde
+.minha-imagem 
 {
-    height: 700px;
-    text-align:right;
-}
-
-.coporosa
-{
-     height: 480px;
-     text-align:center;
-     margin-top: -290px; 
-}
-
-.starbucks 
-{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family:'poppins', 'sans-serif';
-color:rgb(36, 228, 36); 
-}
-
-.cliqueaqui 
- {
-position: absolute;
-left: 150px;
-bottom : 20px ;
-border-width: 20px;
-border-color:rgb(36, 228, 36);
-border-style: solid;
-border-radius: 50px;
-background-color: rgb(36, 228, 36) ;
-
- }
-
-.cliqueaqui:hover 
-{
-    color:white;
-}
-
-.logo
-{
-text-align: left;
-height: 50px;
-border-radius: 50%;
-}
-
-ul {
-    list-style-type:none;
-}
-
-li{
-    display:inline;
-    padding: 25px;
-    font-family:'poppins', 'sans-serif';
-    color:black;
-    
-}
- 
-.acesso 
-{
-text-align: right;
-}
-
-
-.acesso :hover 
-{
-    color: white;
-}
-
-body{
-    background-image: url(fundo\ brando.jpg);
-    background-repeat: no-repeat;
-    background-size: 200%;
-}
-
-.descrição
-{
-    font-family:'montserrat', 'sans-serif';
-}
-
-.descrição2 
-{
-  margin-top:-25%; 
+text-align: center;
 }
 
